--- a/jjacostablascomaven/taller-maven/pom.xml
+++ b/jjacostablascomaven/taller-maven/pom.xml
@@ -10,6 +10,7 @@
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <jodatime-version>2.10.10</jodatime-version> 
   </properties>
   <dependencies>
     <dependency>
